--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,3 @@
-.weather-app {
-  max-width: 600px;
-  margin: 40px auto;
-  padding: 20px;
-  border: 1px solid lightgray;
-  border-radius: 15px;
-  font-family: "Unbounded", cursive;
-}
-
 h1 {
   font-size: 24px;
   font-weight: 100;
@@ -24,4 +15,19 @@ li {
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
+}
+
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 40px auto;
+}
+
+.weather-app {
+  max-width: 600px;
+  margin: 40px auto;
+  margin-bottom: 0;
+  padding: 20px;
+  border: 1px solid lightgray;
+  border-radius: 15px;
+  font-family: "Unbounded", cursive;
 }
