--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,9 @@ li {
   line-height: 19px;
   position: relative;
   top: 10px;
+}
+
+li:first-letter {
   text-transform: capitalize;
 }
 
@@ -39,6 +42,10 @@ li {
   margin-bottom: 20px;
 }
 
+#date-description {
+  position: relative;
+  top: -20px;
+}
 .weather-temperature img {
   margin-left: 20px;
   height: 64px;
