Added conversion from farenheit to celsius
Add event listener and conversion for farenheit and celsius.
Creating the link to active when click from one another.

--- a/src/styles.css
+++ b/src/styles.css
@@ -59,7 +59,17 @@ li:first-letter {
 }
 
 .current-temperature {
-  color: black;
+  color: rgb(33, 33, 33);
   font-size: 50px;
   font-weight: 100px;
+}
+
+.active {
+  color: rgb(33, 33, 33);
+  cursor: default;
+}
+
+.active:hover {
+  text-decoration: none;
+  color: rgb(33, 33, 33);
 }
