--- a/src/styles.css
+++ b/src/styles.css
@@ -45,8 +45,9 @@ li:first-letter {
 }
 
 .weather-app:hover {
-  transition-duration: 0.6s;
-  background-color: rgb(242, 242, 210, 1);
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+  background-color: rgb(255, 249, 235, 0.85);
 }
 
 .overview {
@@ -57,6 +58,7 @@ li:first-letter {
   position: relative;
   top: -20px;
 }
+
 .weather-temperature img {
   margin-left: 20px;
   height: 64px;
@@ -67,12 +69,20 @@ li:first-letter {
   position: relative;
   font-size: 16px;
   top: 10px;
+  left: 225px;
 }
 
 .current-temperature {
+  position: relative;
   color: rgb(33, 33, 33);
   font-size: 50px;
   font-weight: 100px;
+  left: 225px;
+}
+
+.conditions {
+  position: relative;
+  left: 75px;
 }
 
 .active {
@@ -85,7 +95,7 @@ li:first-letter {
   color: rgb(33, 33, 33);
 }
 
-.weather-forecase {
+.weather-forecast {
   margin-top: 20px;
   text-align: center;
 }
